--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cors": "^2.8.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "form-data": "^4.0.5",
+    "multer": "^2.0.2",
     "pg": "^8.16.3"
   }
 }
