--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ VERSION=v18.0
 
 # Database (Render Postgres)
 DATABASE_URL=postgres://username:password@host:port/database
+
+# Supabase (for Flow Management)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your_supabase_anon_key_here
