--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.3",
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.6",
@@ -23,6 +24,7 @@
     "express": "^4.18.2",
     "form-data": "^4.0.5",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "pg": "^8.16.3"
   }
 }
